--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,41 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+.home-content { //styling the home page with css
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  background-color: #f1f1f1;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.logo-container {
+  margin-bottom: 30px;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+.logo-image {
+  width: 120px;
+  height: 120px;
 }
 
-#container a {
-  text-decoration: none;
+.location-button,
+.weather-button,
+.facts-button,
+.quiz-button {
+  margin-bottom: 10px;
+  background-color: #4e8cff;
+  color: #fff;
+  font-weight: bold;
+}
+
+.location-button:hover,
+.weather-button:hover,
+.facts-button:hover,
+.quiz-button:hover {
+  background-color: #2266cc;
+}
+
+.location-button:active,
+.weather-button:active,
+.facts-button:active,
+.quiz-button:active {
+  background-color: #0c3e99;
 }
